[gd_scene load_steps=2 format=3 uid="uid://o1eeqar0a2ae"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_e8foo"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e8foo")

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.266406
anchor_top = -0.158333
anchor_right = 0.371094
anchor_bottom = 0.484722
offset_left = 596.0
offset_top = 236.0
offset_right = -3.0
offset_bottom = -93.0
text = "Play"
metadata/_edit_use_anchors_ = true

[node name="Settings" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0960938
anchor_top = 0.0291667
anchor_right = 0.960156
anchor_bottom = 1.10417
offset_left = 481.0
offset_top = 341.0
offset_right = -729.0
offset_bottom = -348.0
text = "Settings"
metadata/_edit_use_anchors_ = true

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.1375
anchor_top = 0.193056
anchor_right = 0.961719
anchor_bottom = 1.30972
offset_left = 883.0
offset_top = 362.0
offset_right = -355.0
offset_bottom = -327.0
text = "Quit"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
